--- a/restaurant.html
+++ b/restaurant.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <!-- Normalize.css for better cross-browser consistency -->
@@ -12,34 +12,35 @@
 </head>
 
 <body class="inside">
-  <header>
-    <nav>
-      <h1><a href="/">Restaurant Reviews</a></h1>
+  <header role="banner">
+    <nav aria-label="breadcrumb" role="navigation" >
+      <h1><a href="/" tabindex="0">Restaurant Reviews</a></h1>
     </nav>
-    <ul id="breadcrumb" >
-      <li><a href="/">Home</a></li>
+    <ul id="breadcrumb" role="navigation">
+      <li><a href="/" tabindex="0">Home</a></li>
     </ul>
   </header>
 
-  <main id="maincontent">
-    <section id="restaurant-container">
-      <h1 id="restaurant-name"></h1>
-      <img id="restaurant-img">
-      <p id="restaurant-cuisine"></p>
-      <p id="restaurant-address"></p>
+  <main id="maincontent" role="main">
+    <section id="restaurant-container" role="article" aria-label="restaurant details">
+      <h1 id="restaurant-name" aria-label="restaurant name"></h1>
+      <img id="restaurant-img" role="image">
+      <p id="restaurant-cuisine" aria-label="restaurant cuisine"></p>
+      <p id="restaurant-address"  aria-label="restaurant address"></p>
       <section id="restaurant-inner-container">
-        <table id="restaurant-hours"></table>
+        <table id="restaurant-hours" aria-label="restaurant hours"></table>
       </section>
     </section>
-    <section id="map-container">
-      <div id="map"></div>
+    <section id="map-container" role="application" tabindex="-1">
+      <div id="map" aria-hidden="true" aria-describedby="map-description"></div>
+      <div hidden id="map-description">Map showing restaurant location</div>
     </section>
-    <section id="reviews-container">
+    <section id="reviews-container" role="article" aria-label="restaurant reviews">
       <ul id="reviews-list"></ul>
     </section>
   </main>
 
-  <footer id="footer">
+  <footer id="footer" role="contentinfo">
     Copyright (c) 2018 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
   </footer>
   <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
