--- a/restaurant.html
+++ b/restaurant.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <meta charset="utf-8">
   <!-- Normalize.css for better cross-browser consistency -->
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <link rel="stylesheet" href="css/styles.css" type="text/css">
@@ -23,13 +24,14 @@
 
   <main id="maincontent" role="main">
     <section id="restaurant-container" role="article" aria-label="restaurant details">
-      <h1 id="restaurant-name" aria-label="restaurant name"></h1>
+      <h2 id="restaurant-name" aria-label="restaurant name"></h2>
       <img id="restaurant-img" role="image">
       <p id="restaurant-cuisine" aria-label="restaurant cuisine"></p>
-      <p id="restaurant-address"  aria-label="restaurant address"></p>
+      <address id="restaurant-address"  aria-label="restaurant address"></address>
       <section id="restaurant-inner-container">
         <table id="restaurant-hours" aria-label="restaurant hours"></table>
       </section>
+      <label for="restaurant-hours" class="labels">Restaurant Hours</label>
     </section>
     <section id="map-container" role="application" tabindex="-1">
       <div id="map" aria-hidden="true" aria-describedby="map-description"></div>
